--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,30 @@
 
 /*Buyer Information*/
 
-
+#headingpage2{
+    text-align: center;
+}
+.subheadingpage2 {
+    padding: 30px 0px;
+    color: #0B6E4F;
+    text-shadow: 1px 1px #85CB33;
+}
 .buyerinfo, .shippinginfo{
   display: flex;
   flex-direction: column;
-  padding-bottom: 20px;
+  padding: 15px 0px;
 }
+label {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #0B6E4F;
+    font-weight:bold;
+    padding-bottom: 5px;
+}
+input:focus{
+    background-color:#d2ff9f;
+    border: solid #0B6E4F 2px;
 
+}
 /*Footer*/
 
 footer{
