--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,18 @@
+/*html*/
+
+html {
+  scroll-behavior: smooth;
+}
+/*Smooth Scroll: https://www.w3schools.com/howto/howto_css_smooth_scroll.asp#section2*/
+
+
+
+/*HOME PAGE---------------------------------------------------*/
+
+
 /*Header*/
 
-.topnavigation {
+.headernavigation {
     background-color: #D5DDE2;
 }
 #logo{
@@ -9,12 +21,13 @@
 }
 #mainheading {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 50px;
+    font-size: 60px;
     color: white;
     text-shadow: 2px 2px #0B6E4F; /*Text shadow: https://www.w3schools.com/css/css_text_shadow.asp*/
-    background-color: #85CB33;
     text-align: center;
     padding: 60px 0px;
+    background: #2A7B9B;
+    background: linear-gradient(160deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%); /*Gradient: https://cssgradient.io/*/
 }
 
 /*Hidden*/
@@ -28,15 +41,20 @@
     text-align: center;
     padding: 30px 0px;
 }
-#introheading{
+#introheading, .subheading{
     color:#0B6E4F;
-    text-shadow: 1px 1px greenyellow;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-shadow: 1px 2px greenyellow;
     border-bottom: solid 2px #0B6E4F;
     padding-bottom: 12px;
+    text-align: center;
 }
 #introtext {
     font-family: Cambria, serif;
-    font-size: 18px;
+    font-size: 20px;
+    line-height: 35px;
     padding-top: 20px;
     text-align: center;
 }
@@ -45,14 +63,10 @@
 
 /*Cart Information*/
 
-.subheading {
-    color:#0B6E4F;
-    text-shadow: 1px 1px greenyellow;
-    text-align: center;
-    padding-bottom: 20px;
-}
-#cartinfo span{
+
+#cartinfo, #cartinfo span{
     font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 /*Products*/
 
